--- a/haskell-features.cabal
+++ b/haskell-features.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               myfirstapp
+name:               haskell-features
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
@@ -10,9 +10,11 @@ version:            0.1.0.0
 
 -- A URL where users can report bugs.
 -- bug-reports:
-license:            NONE
-author:             andrii maliuta
-maintainer:         quadr988"gmail.com
+
+-- The license under which the package is released.
+-- license:
+author:             Andrii Maliuta
+maintainer:         quadr988@gmail.com
 
 -- A copyright notice.
 -- copyright:
@@ -21,7 +23,7 @@ extra-source-files:
     CHANGELOG.md
     readme.md
 
-executable myfirstapp
+executable haskell-features
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
@@ -29,8 +31,6 @@ executable myfirstapp
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    
-        base ^>=4.14.3.0,
-        haskell-say ^>=1.0.0.0
+    build-depends:    base ^>=4.13.0.0
     hs-source-dirs:   app
     default-language: Haskell2010
